styles.css
*{
    margin: 0;
    padding: 0;
}

body{
    background-color:#96C83C;
    font-family: 'Ubuntu', sans-serif;
}

.navbar{
    display: flex;
    flex-direction: row;
    justify-content: center;
    background-color: #3AB54A;
}

.navbar img{
    width: 150px;
}

.about-us-div{
    display: flex;
    flex-direction: column;
    line-height: 1.5;
    margin: 10px 10px 0 10px;
    padding: 20px 10px 0 10px;
}

.title{
    font-family: 'Grenze Gotisch', cursive;
    text-align: center;    
    font-size: 3rem;
}

.about-us-div p, .about-us-div ul, .about-us-div ol{
    font-size: 1rem;
}

.bank-logo{
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.bank-logo img{
    width: 150px;
}

.about-us-div iframe{
    width: 100%;
}

.about-us-div ul{
    padding: 10px 20px ;
}

.about-us-div ol{
    padding: 0 20px 0 20px;
}

.contact-card{
    background-color: antiquewhite;
    border: 2px solid greenyellow;
    border-radius: 10px;
    margin: 10px;
    padding: 10px;
    width: 200px;
    display: flex;
    flex-direction: column;
}



@media only screen and (max-width: 500px){
    .title{
        font-size: 2rem;
    }
    
    .about-us-div p, .about-us-div ul, .about-us-div ol{
        font-size: 1rem;
    }

    .bank-logo{
        display: flex;
        flex-direction: column;
    }

    .bank-logo img{
        width: 100%;
    }
    .about-us-div iframe{
        width: 100%;
    }
}

input[type=text], input[type=email], input[type=number], select{
    width: 100%;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 4px;
}

label {
    padding: 12px 12px 12px 0;
    display: inline-block;
}

input[type=submit]{
    background-color: teal;
    color: whitesmoke;
    margin-top: 10px;
    padding: 12px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    float: right;
}

input[type=submit]:hover{
    background-color:  #015d56;
}

.form-div{
    display: flex;
    flex-direction: column;
    border-radius: 5px;
    background-color: #96C83C;
    padding: 0px;  
     
}

.form-col{
    float: left;
    width: 30%;
    margin-top: 6px;
}

.form-col2{
    float: left;
    width: 70%;
    margin-top: 6px;
}

.row1:after{
    content: "";
    display: table;
    clear: both;
}

@media screen and (max-width: 600px){
    .form-col, .form-col2, input[type=submit]{
        width: 100%;
        margin-top: 0;
    }
}

